Tried to make it work with Java 11